--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,15 @@
      */
 
     // this is the global radar options object
-    window.RADAROPTIONS = {
-        serverMode: true,
-        protocol: 'http',
-        host: 'localhost',
-        port: 8300,
-        apiVersion: 'v1'
-    };
+    const radarOptions = {
+            serverMode: true,
+            protocol: 'http',
+            host: 'localhost',
+            port: 8200,
+            apiVersion: 'v1'
+        };
 
-    new RADAR().then(radar => {
+    new RADAR(radarOptions).then(radar => {
         window.RADAR = radar;
         console.log('>>> ZACK FEDDICH. RADAR ACCESSIBLE', 'window.RADAR or RADAR');
 
